<?xml version="1.1" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCar" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tiFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvFavorite" />

    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tvAppName"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOpenCalculateScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnOpenMathScreen"

        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMainScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tlMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnOpenCalculateScreen"
        tools:listitem="@layout/list_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        >

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>