<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCardContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ivDescriptionPanamera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/panamera" />

            <TextView
                android:id="@+id/tvCarValue"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/tvValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgCar" />

            <TextView
                android:id="@+id/tvNumericCarValue"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toEndOf="@+id/tvCarValue"
                app:layout_constraintTop_toBottomOf="@+id/imgCar" />

            <TextView
                android:id="@+id/tvBatery"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/tvBatery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCarValue" />

            <TextView
                android:id="@+id/tvPotency"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/tvPotency"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBatery" />

            <TextView
                android:id="@+id/tvRecharge"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/tvRecharge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPotency" />

            <TextView
                android:id="@+id/tvBateryValue"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toEndOf="@+id/tvBatery"
                app:layout_constraintTop_toBottomOf="@+id/tvNumericCarValue" />

            <TextView
                android:id="@+id/tvPotencyValue"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toEndOf="@+id/tvPotency"
                app:layout_constraintTop_toBottomOf="@+id/tvBateryValue" />

            <TextView
                android:id="@+id/tvRechargeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toEndOf="@+id/tvPotency"
                app:layout_constraintTop_toBottomOf="@+id/tvPotencyValue"
                app:layout_constraintBottom_toBottomOf="@+id/clCardContent"
                android:layout_marginBottom="8dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>